# dmsh

./: .gitignore  Makefile  README.md  justfile  pyproject.toml  setup.cfg  setup.py  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
dmsh/: __about__.py  __init__.py  geometry.py  helpers.py  main.py
dmsh/geometry/: __init__.py  circle.py  difference.py  ellipse.py  geometry.py  halfspace.py  intersection.py  path.py  polygon.py  rectangle.py  rotation.py  scaling.py  stretch.py  translation.py  union.py
dmsh/geometry/pypathlib/: __about__.py  __init__.py  closed_path.py  helpers.py  path.py
dmsh/geometry/pypathlib/.circleci/: config.yml
src/dmsh/: __about__.py  helpers.py  main.py
src/dmsh/geometry/: __init__.py  circle.py  difference.py  ellipse.py  geometry.py  halfspace.py  path.py  polygon.py  rectangle.py  rotation.py  scaling.py  translation.py  union.py
src/dmsh/geometry/pypathlib/: __init__.py  closed_path.py  path.py
test/: Makefile  compare-speed.py  generate-readme-plots.py  helpers.py  test_circle.py  test_closed_path.py  test_custom.py  test_difference.py  test_dmsh.py  test_ellipse.py  test_halfspace.py  test_hole_in_square.py  test_hole_in_square_refined.py  test_intersection.py  test_intersection_three_circles.py  test_large.py  test_pacman.py  test_path.py  test_polygon.py  test_quarter_annulus.py  test_readme.py  test_rectangle.py  test_rectangle_hole.py  test_refinement_point_line.py  test_rotate.py  test_rotation.py  test_scaling.py  test_show_level_set.py  test_speed.py  test_square_hole.py  test_square_hole_refined.py  test_stretch.py  test_translate.py  test_translation.py  test_union.py  test_union_rectangles.py  test_union_three_circles.py
tests/: compare-speed.py  helpers.py  justfile  logo.py  test_circle.py  test_difference.py  test_ellipse.py  test_halfspace.py  test_intersection.py  test_large.py  test_polygon.py  test_quarter_annulus.py  test_refinement_point_line.py  test_rotation.py  test_scaling.py  test_show_level_set.py  test_speed.py  test_square_hole_refined.py  test_stretch.py  test_translation.py  test_union.py
