[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# https://tox.readthedocs.io/en/latest/example/basic.html#pyproject-toml-tox-legacy-ini
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3
isolated_build = True

[testenv]
deps =
  perfplot
  pytest
  pytest-cov
commands =
  pytest --cov {envsitepackagesdir}/dmsh --cov-report xml --cov-report term
"""

