[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"

[project]
name = "dmsh"
authors = [{name = "Nico Schlömer", email = "nico.schloemer@gmail.com"}]
description = "High-quality 2D mesh generator based on distmesh"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "meshplex >= 0.16.0, < 0.18.0",
  "npx",
  "numpy",
  "scipy",
]

[project.optional-dependencies]
all = ["matplotlib"]

[project.urls]
Code = "https://github.com/nschloe/dmsh"
Issues = "https://github.com/nschloe/dmsh/issues"
Funding = "https://github.com/sponsors/nschloe"
