[metadata]
name = dmsh
version = 0.2.1
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = High-quality 2D mesh generator based on distmesh
url = https://github.com/nschloe/dmsh
project_urls =
    Code=https://github.com/nschloe/dmsh
    Issues=https://github.com/nschloe/dmsh/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics


[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    meshplex
    numpy
    scipy
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.extras_require]
all = matplotlib
plot = matplotlib

[options.entry_points]
console_scripts =
    dmsh-image = dmsh.cli:image
    dmsh-poly = dmsh.cli:poly
